added ui element to display arc tasks as cards

--- a/f/package.json
+++ b/f/package.json
@@ -13,9 +13,14 @@
     "deploy": "bunx gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.6",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.10.5",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
